--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.1.0",
+    "openai": "4.47.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
